--- a/mau-website-35-p2.html
+++ b/mau-website-35-p2.html
@@ -1465,7 +1465,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>87</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-35.html">1</a><a class="intrang" href="mau-website-35-p2.html">2</a><a class="" href="mau-website-35-p3.html">3</a>													</span>
+														<a class="" href="mau-website-35.html">1</a><a class="intrang" href="mau-website-35-p2.html">2</a>													</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -1935,145 +1935,13 @@
 														</div>
 													</div>
 																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://caysuadolongson.com.vn/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/293/300_1/jpg/thiet-ke-website-caysuadolongson-com-vn_300x300.jpg" alt="Thiết kế website caysuadolongson.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/293/300_1/jpg/thiet-ke-website-caysuadolongson-com-vn_300x300.jpg" alt="Thiết kế website caysuadolongson.com.vn"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website caysuadolongson.com.vn</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12094.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/290/300_1/jpg/thiet-ke-website-vuonkienngocsang-com_300x300.jpg" alt="Thiết kế website vuonkienngocsang.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/290/300_1/jpg/thiet-ke-website-vuonkienngocsang-com_300x300.jpg" alt="Thiết kế website vuonkienngocsang.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website vuonkienngocsang.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12088.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/285/300_1/jpg/thiet-ke-website-sevenflower-vn_300x300.jpg" alt="Thiết kế website sevenflower.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/285/300_1/jpg/thiet-ke-website-sevenflower-vn_300x300.jpg" alt="Thiết kế website sevenflower.vn"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website sevenflower.vn</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://nhatmyxophoi.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/281/300_1/jpg/thiet-ke-website-nhatmyxophoi-com_300x300.jpg" alt="Thiết kế website nhatmyxophoi.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/281/300_1/jpg/thiet-ke-website-nhatmyxophoi-com_300x300.jpg" alt="Thiết kế website nhatmyxophoi.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website nhatmyxophoi.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://tranhtheuphuongnhien.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/270/300_1/jpg/thiet-ke-website-tranhtheuphuongnhien-com_300x300.jpg" alt="Thiết kế website tranhtheuphuongnhien.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/270/300_1/jpg/thiet-ke-website-tranhtheuphuongnhien-com_300x300.jpg" alt="Thiết kế website tranhtheuphuongnhien.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website tranhtheuphuongnhien.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://anhdepvietnam.com.vn/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/269/300_1/jpg/thiet-ke-website-anhdepvietnam-com_300x300.jpg" alt="thiết kế website anhdepvietnam.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/269/300_1/jpg/thiet-ke-website-anhdepvietnam-com_300x300.jpg" alt="thiết kế website anhdepvietnam.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>thiết kế website anhdepvietnam.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12039.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/250/300_1/jpg/thiet-ke-website-inquangdung-com_300x300.jpg" alt="Thiết kế website inquangdung.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/250/300_1/jpg/thiet-ke-website-inquangdung-com_300x300.jpg" alt="Thiết kế website inquangdung.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website inquangdung.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/139/300_1/jpg/mau-thiet-ke-web-0093_300x300.jpg" alt="Mẫu Thiết Kế Web 0093">
-																		<noscript><img src="../websitere.vn/files/sanpham/139/300_1/jpg/mau-thiet-ke-web-0093_300x300.jpg" alt="Mẫu Thiết Kế Web 0093"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0093</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/138/300_1/jpg/mau-thiet-ke-web-0094_300x300.jpg" alt="Mẫu Thiết Kế Web 0094">
-																		<noscript><img src="../websitere.vn/files/sanpham/138/300_1/jpg/mau-thiet-ke-web-0094_300x300.jpg" alt="Mẫu Thiết Kế Web 0094"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0094</strong>
-																</h2>
-															</a>
-														</div>
+														
 													</div>
 																						</div>
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>87</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-35.html">1</a><a class="intrang" href="mau-website-35-p2.html">2</a><a class="" href="mau-website-35-p3.html">3</a>													</span>
+														<a class="" href="mau-website-35.html">1</a><a class="intrang" href="mau-website-35-p2.html">2</a>													</span>
 												</div>
 																	</div>
 							</div>
