--- a/mau-website-35.html
+++ b/mau-website-35.html
@@ -1464,7 +1464,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>87</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-35.html">1</a><a class="" href="mau-website-35-p2.html">2</a><a class="" href="mau-website-35-p3.html">3</a>													</span>
+														<a class="intrang" href="mau-website-35.html">1</a><a class="" href="mau-website-35-p2.html">2</a>													</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -2072,7 +2072,7 @@
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>87</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-35.html">1</a><a class="" href="mau-website-35-p2.html">2</a><a class="" href="mau-website-35-p3.html">3</a>													</span>
+														<a class="intrang" href="mau-website-35.html">1</a><a class="" href="mau-website-35-p2.html">2</a>													</span>
 												</div>
 																	</div>
 							</div>
