--- a/mau-website-19-p4.html
+++ b/mau-website-19-p4.html
@@ -1464,7 +1464,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>162</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="intrang" href="mau-website-19-p4.html">4</a><a class="" href="mau-website-19-p5.html">5</a>													</span>
+														<a class="" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="intrang" href="mau-website-19-p4.html">4</a>												</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -1799,280 +1799,13 @@
 														</div>
 													</div>
 																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12059.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/267/300_1/jpg/thiet-ke-website-xaudungvogia-com_300x300.jpg" alt="Thiết kế website xaudungvogia.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/267/300_1/jpg/thiet-ke-website-xaudungvogia-com_300x300.jpg" alt="Thiết kế website xaudungvogia.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website xaudungvogia.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://cadcons.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/263/300_1/jpg/thiet-ke-website-cadcons-com_300x300.jpg" alt="Thiết kế website cadcons.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/263/300_1/jpg/thiet-ke-website-cadcons-com_300x300.jpg" alt="Thiết kế website cadcons.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website cadcons.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ducdung.org.vn/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/253/300_1/jpg/thiet-ke-website-ducdung-org-vn_300x300.jpg" alt="Thiết kế website ducdung.org.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/253/300_1/jpg/thiet-ke-website-ducdung-org-vn_300x300.jpg" alt="Thiết kế website ducdung.org.vn"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website ducdung.org.vn</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/156/300_1/jpg/mau-thiet-ke-web-0076_300x300.jpg" alt="Mẫu Thiết Kế Web 0076">
-																		<noscript><img src="../websitere.vn/files/sanpham/156/300_1/jpg/mau-thiet-ke-web-0076_300x300.jpg" alt="Mẫu Thiết Kế Web 0076"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0076</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/155/300_1/jpg/mau-thiet-ke-web-0077_300x300.jpg" alt="Mẫu Thiết Kế Web 0077">
-																		<noscript><img src="../websitere.vn/files/sanpham/155/300_1/jpg/mau-thiet-ke-web-0077_300x300.jpg" alt="Mẫu Thiết Kế Web 0077"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0077</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/154/300_1/jpg/mau-thiet-ke-web-0078_300x300.jpg" alt="Mẫu Thiết Kế Web 0078">
-																		<noscript><img src="../websitere.vn/files/sanpham/154/300_1/jpg/mau-thiet-ke-web-0078_300x300.jpg" alt="Mẫu Thiết Kế Web 0078"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0078</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/153/300_1/jpg/mau-thiet-ke-web-0079_300x300.jpg" alt="Mẫu Thiết Kế Web 0079">
-																		<noscript><img src="../websitere.vn/files/sanpham/153/300_1/jpg/mau-thiet-ke-web-0079_300x300.jpg" alt="Mẫu Thiết Kế Web 0079"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0079</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/152/300_1/jpg/mau-thiet-ke-web-0080_300x300.jpg" alt="Mẫu Thiết Kế Web 0080">
-																		<noscript><img src="../websitere.vn/files/sanpham/152/300_1/jpg/mau-thiet-ke-web-0080_300x300.jpg" alt="Mẫu Thiết Kế Web 0080"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0080</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/151/300_1/jpg/mau-thiet-ke-web-0081_300x300.jpg" alt="Mẫu Thiết Kế Web 0081">
-																		<noscript><img src="../websitere.vn/files/sanpham/151/300_1/jpg/mau-thiet-ke-web-0081_300x300.jpg" alt="Mẫu Thiết Kế Web 0081"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0081</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/150/300_1/jpg/mau-thiet-ke-web-0082_300x300.jpg" alt="Mẫu Thiết Kế Web 0082">
-																		<noscript><img src="../websitere.vn/files/sanpham/150/300_1/jpg/mau-thiet-ke-web-0082_300x300.jpg" alt="Mẫu Thiết Kế Web 0082"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0082</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/149/300_1/jpg/mau-thiet-ke-web-0083_300x300.jpg" alt="Mẫu Thiết Kế Web 0083">
-																		<noscript><img src="../websitere.vn/files/sanpham/149/300_1/jpg/mau-thiet-ke-web-0083_300x300.jpg" alt="Mẫu Thiết Kế Web 0083"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0083</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/148/300_1/jpg/mau-thiet-ke-web-0084_300x300.jpg" alt="Mẫu Thiết Kế Web 0084">
-																		<noscript><img src="../websitere.vn/files/sanpham/148/300_1/jpg/mau-thiet-ke-web-0084_300x300.jpg" alt="Mẫu Thiết Kế Web 0084"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0084</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/147/300_1/jpg/mau-thiet-ke-web-0085_300x300.jpg" alt="Mẫu Thiết Kế Web 0085">
-																		<noscript><img src="../websitere.vn/files/sanpham/147/300_1/jpg/mau-thiet-ke-web-0085_300x300.jpg" alt="Mẫu Thiết Kế Web 0085"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0085</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/146/300_1/jpg/mau-thiet-ke-web-0086_300x300.jpg" alt="Mẫu Thiết Kế Web 0086">
-																		<noscript><img src="../websitere.vn/files/sanpham/146/300_1/jpg/mau-thiet-ke-web-0086_300x300.jpg" alt="Mẫu Thiết Kế Web 0086"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0086</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/145/300_1/jpg/mau-thiet-ke-web-0087_300x300.jpg" alt="Mẫu Thiết Kế Web 0087">
-																		<noscript><img src="../websitere.vn/files/sanpham/145/300_1/jpg/mau-thiet-ke-web-0087_300x300.jpg" alt="Mẫu Thiết Kế Web 0087"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0087</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/144/300_1/jpg/mau-thiet-ke-web-0088_300x300.jpg" alt="Mẫu Thiết Kế Web 0088">
-																		<noscript><img src="../websitere.vn/files/sanpham/144/300_1/jpg/mau-thiet-ke-web-0088_300x300.jpg" alt="Mẫu Thiết Kế Web 0088"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0088</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/143/300_1/jpg/mau-thiet-ke-web-0089_300x300.jpg" alt="Mẫu Thiết Kế Web 0089">
-																		<noscript><img src="../websitere.vn/files/sanpham/143/300_1/jpg/mau-thiet-ke-web-0089_300x300.jpg" alt="Mẫu Thiết Kế Web 0089"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0089</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/142/300_1/jpg/mau-thiet-ke-web-0090_300x300.jpg" alt="Mẫu Thiết Kế Web 0090">
-																		<noscript><img src="../websitere.vn/files/sanpham/142/300_1/jpg/mau-thiet-ke-web-0090_300x300.jpg" alt="Mẫu Thiết Kế Web 0090"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0090</strong>
-																</h2>
-															</a>
-														</div>
+														
 													</div>
 																						</div>
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>162</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="intrang" href="mau-website-19-p4.html">4</a><a class="" href="mau-website-19-p5.html">5</a>													</span>
+														<a class="" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="intrang" href="mau-website-19-p4.html">4</a>												</span>
 												</div>
 																	</div>
 							</div>
