--- a/mau-website-19.html
+++ b/mau-website-19.html
@@ -1464,7 +1464,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>162</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="" href="mau-website-19-p4.html">4</a><a class="" href="mau-website-19-p5.html">5</a>													</span>
+														<a class="intrang" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="" href="mau-website-19-p4.html">4</a>												</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -2072,7 +2072,7 @@
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>162</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="" href="mau-website-19-p4.html">4</a><a class="" href="mau-website-19-p5.html">5</a>													</span>
+														<a class="intrang" href="mau-website-19.html">1</a><a class="" href="mau-website-19-p2.html">2</a><a class="" href="mau-website-19-p3.html">3</a><a class="" href="mau-website-19-p4.html">4</a>												</span>
 												</div>
 																	</div>
 							</div>
