--- a/mau-website-15-p4.html
+++ b/mau-website-15-p4.html
@@ -1464,7 +1464,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>164</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-15.html">1</a><a class="" href="mau-website-15-p2.html">2</a><a class="" href="mau-website-15-p3.html">3</a><a class="intrang" href="mau-website-15-p4.html">4</a><a class="" href="mau-website-15-p5.html">5</a>													</span>
+														<a class="" href="mau-website-15.html">1</a><a class="" href="mau-website-15-p2.html">2</a><a class="" href="mau-website-15-p3.html">3</a><a class="intrang" href="mau-website-15-p4.html">4</a>													</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -1904,175 +1904,13 @@
 														</div>
 													</div>
 																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/280/300_1/jpg/thiet-ke-website-noithatsinhloi-com-vn_300x300.jpg" alt="Thiết kế website noithatsinhloi.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/280/300_1/jpg/thiet-ke-website-noithatsinhloi-com-vn_300x300.jpg" alt="Thiết kế website noithatsinhloi.com.vn"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website noithatsinhloi.com.vn</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/279/300_1/jpg/thiet-ke-website-goixopsg-com_300x300.jpg" alt="Thiết kế website goixopsg.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/279/300_1/jpg/thiet-ke-website-goixopsg-com_300x300.jpg" alt="Thiết kế website goixopsg.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website goixopsg.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/273/300_1/jpg/thiet-ke-website-noithattamgia-com_300x300.jpg" alt="Thiết kế website noithâttamgia.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/273/300_1/jpg/thiet-ke-website-noithattamgia-com_300x300.jpg" alt="Thiết kế website noithâttamgia.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website noithâttamgia.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12050.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/261/300_1/jpg/thiet-ke-website-trihuefurniture-com_300x300.jpg" alt="Thiết kế website trihuefurniture.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/261/300_1/jpg/thiet-ke-website-trihuefurniture-com_300x300.jpg" alt="Thiết kế website trihuefurniture.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website trihuefurniture.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://daithanhphatfurniture.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/245/300_1/jpg/thiet-ke-website-daithanhphatfurniture-com_300x300.jpg" alt="Thiết kế website daithanhphatfurniture.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/245/300_1/jpg/thiet-ke-website-daithanhphatfurniture-com_300x300.jpg" alt="Thiết kế website daithanhphatfurniture.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website daithanhphatfurniture.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12022.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/243/300_1/jpg/thiet-ke-website-minhnguyen9-com_300x300.jpg" alt="Thiết kế website minhnguyen9.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/243/300_1/jpg/thiet-ke-website-minhnguyen9-com_300x300.jpg" alt="Thiết kế website minhnguyen9.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website minhnguyen9.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12013.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/235/300_1/jpg/thiet-ke-website-kienphucdecor-com_300x300.jpg" alt="Thiết kế website kienphucdecor.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/235/300_1/jpg/thiet-ke-website-kienphucdecor-com_300x300.jpg" alt="Thiết kế website kienphucdecor.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website kienphucdecor.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://mainguyenfurniture.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/234/300_1/jpg/thiet-ke-website-mainguyenfurniture-com_300x300.jpg" alt="Thiết kế website mainguyenfurniture.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/234/300_1/jpg/thiet-ke-website-mainguyenfurniture-com_300x300.jpg" alt="Thiết kế website mainguyenfurniture.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website mainguyenfurniture.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://steamvi.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/233/300_1/jpg/thiet-ke-website-steamvi-com_300x300.jpg" alt="Thiết kế website Steamvi.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/233/300_1/jpg/thiet-ke-website-steamvi-com_300x300.jpg" alt="Thiết kế website Steamvi.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website Steamvi.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/192/300_1/jpg/mau-thiet-ke-web-0040_300x300.jpg" alt="Mẫu Thiết Kế Web 0040">
-																		<noscript><img src="../websitere.vn/files/sanpham/192/300_1/jpg/mau-thiet-ke-web-0040_300x300.jpg" alt="Mẫu Thiết Kế Web 0040"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0040</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/191/300_1/jpg/mau-thiet-ke-web-0041_300x300.jpg" alt="Mẫu Thiết Kế Web 0041">
-																		<noscript><img src="../websitere.vn/files/sanpham/191/300_1/jpg/mau-thiet-ke-web-0041_300x300.jpg" alt="Mẫu Thiết Kế Web 0041"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0041</strong>
-																</h2>
-															</a>
-														</div>
+														
 													</div>
 																						</div>
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>164</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-15.html">1</a><a class="" href="mau-website-15-p2.html">2</a><a class="" href="mau-website-15-p3.html">3</a><a class="intrang" href="mau-website-15-p4.html">4</a><a class="" href="mau-website-15-p5.html">5</a>													</span>
+														<a class="" href="mau-website-15.html">1</a><a class="" href="mau-website-15-p2.html">2</a><a class="" href="mau-website-15-p3.html">3</a><a class="intrang" href="mau-website-15-p4.html">4</a>													</span>
 												</div>
 																	</div>
 							</div>
