--- a/thiet-ke-web.html
+++ b/thiet-ke-web.html
@@ -1736,7 +1736,7 @@
 									<div class="boxmauvisao_block boxmauvisao_show">
 										<h3 style="color: #017dc7;font-weight: bold;font-size: 105%;"><i></i> Kinh nghiệm thiết kế</h3>
 										<div>
-											<p>- Với gần 10 năm kinh nghiệm, đã hoàn thành <strong>3000 website</strong> trên nhiều lĩnh vực khác nhau, Web nhanh tự tin đáp ứng toàn bộ nhu cầu của khách hàng, có thể tư vấn toàn bộ thông tin, thi công toàn bộ yêu cầu của quý khách.</p>
+											<p>- Với kinh nghiệm, đã hoàn thành nhiều <strong>website</strong> trên nhiều lĩnh vực khác nhau, Web nhanh tự tin đáp ứng toàn bộ nhu cầu của khách hàng, có thể tư vấn toàn bộ thông tin, thi công toàn bộ yêu cầu của quý khách.</p>
 											<p>- Ý tưởng thiết kế được dựa trên yêu cầu, nhu cầu thực tế của khách hàng, mỗi website là một tác phẩm mang tính đặc trưng riêng, không sao chép hoặc tái sử dụng lại.</p>
 											<p>- Hệ thống quản lý tiêu chuẩn thẩm mỹ, kỹ thuật lập trình, tính thân thiện của website với người dùng được tổ chức nghiêm ngặt để đảm bảo quý khách nhận được 1 website chuyên nghiệp nhất.</p>
 										</div>
